# vqa

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  config.py  dvc.yaml  params.yaml  pyproject.toml  submit.sh  submit_experiment.sh
.dvc/: config
.github/workflows/: main.yaml
callbacks/: __init__.py  checkpoints.py  classification.py  sample.py
collators/: __init__.py  daquar.py  vqa_v2.py
config/: __init__.py  env.py
config/datasets/: __init__.py  daquar.py  vqa_v2.py
data/: .gitignore
data/processed/daquar/: .gitignore
data/processed/vqa_v2/: .gitignore
data/raw/: daquar.dvc
data/raw/vqa_v2/: .gitignore
data/raw/vqa_v2/examples/: .gitignore  (+1 more)
datamodules/: __init__.py  classification.py  vqa_v2.py
experiments/: __init__.py  fusion.py
experiments/encoder_decoder/: __init__.py  configurable.py  vit_gpt2.py
experiments/fusion/: __init__.py  classification.py  simple_cat.py
experiments/vilt/: __init__.py  classification.py  masked_language_modeling.py
lightning_modules/: mixins.py
lightning_modules/encoder_decoder/: __init__.py  configurable.py  vit_gpt2.py
lightning_modules/fusion/: __init__.py  classification.py
lightning_modules/vilt/: __init__.py  classification.py  masked_language_modeling.py  mlm.py
lightningmodules/: __init__.py  classification.py
loggers/: __init__.py  wandb.py
models/: __init__.py  classifiers.py
models/backbones/: __init__.py  configs.py
models/fusion/: __init__.py  simple_cat.py
models/fusions/: __init__.py  attention.py  concatenation.py  deep_set.py  models.py
notebooks/: AnswerSpace.ipynb  Daquar.ipynb  Datasets.ipynb  Experiments.ipynb  VQA_Classification_SimpleFusion.ipynb
pipelines/: __init__.py  generate_vqa_v2_raw_answers_space.py  process_daquar.py  process_vqa_v2.py  process_vqa_v2_sample.py
requirements/: base.txt  dev.txt
scripts/: experiment.sh  experiment.sh.template  fusion-experiments-grid.sh  jupyter.sh  run-experiment.sh  run-jupyter.sh  simple_cat_grid.sh
scripts/encoder_decoder/: configurable.sh  vit_gpt2.sh
scripts/vilt/: classification.sh  masked_language_modeling.sh
transforms/: __init__.py  image.py  noop.py  text.py  vqa_v2.py
utils/: __init__.py  batch.py  config.py  logger.py  phase.py  registry.py  torch.py  types.py
utils/datasets/: __init__.py  answer_space.py  daquar.py  pipelines.py  vqa_v2.py
(+2 files in other folders)
